# ai_rag

./: README.md
chat-with-docs/: .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
chat-with-docs/data/docs/: auto-index-test.md
chat-with-docs/src/api/: main.py
chat-with-docs/src/api/static/: index.html
chat-with-docs/src/rag/: auto_indexer.py  chat.py  chunking.py  config.py  embeddings.py  ingest.py  llm.py  prompts.py  schemas.py  unstructured_loader.py  vectorstore.py
chat-with-docs/tests/: EVALUATION_METRICS.md  README.md  TESTING_SUMMARY.md  run_tests.sh  test_e2e.py  test_evaluation.py  test_unit.py
